tests/snapshots/sfc/js/patches__es6_shorthand_in_event_handler_object.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

import { ref } from 'vue'

export default {
  __name: 'test',
  setup(__props) {

const foo = ref('value')
const bar = ref(123)

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", {
      onClick: _cache[0] || (_cache[0] = $event => (_ctx.handleEvent({ foo: foo.value, bar: bar.value })))
    }, "Test"))
}
}

}
