tests/snapshots/sfc/js/patches__top_level_await_generates_async_setup.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString, unref as _unref } from "vue"


export default {
  __name: 'test',
  async setup(__props) {

const response = await fetch('/api/data')
const data = await response.json()

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(_unref(data)), 1 /* TEXT */))
}
}

}
